--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -19,6 +20,7 @@ android {
         }
     }
 }
+def dbflow_version = "4.0.3"
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -27,6 +29,9 @@ dependencies {
     })
     // recyclerview
     compile 'com.android.support:recyclerview-v7:26.1.0'
+
+    //cardview
+    compile 'com.android.support:cardview-v7:26.1.0'
 
     // Glide
     compile 'com.github.bumptech.glide:glide:3.8.0'
@@ -42,6 +47,16 @@ dependencies {
     // parceler
     compile 'org.parceler:parceler-api:1.1.6'
     annotationProcessor 'org.parceler:parceler:1.1.6'
+
+    //DB flow
+    annotationProcessor "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
+    compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
+    compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
+
+    //Leak Canary
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.1'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
 
     // Support Library
     compile 'com.android.support:support-v4:26.1.0'
